Added user registration with email sending for activation key

--- a/setmaster/frontend/templates/index_auth.html
+++ b/setmaster/frontend/templates/index_auth.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html ng-app="Cards">
-<head>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css">
-</head>
-<body>
+{% extends "base.html" %}
+{%block content %}
+<div ng-app="Cards">
     <div ng-controller="CardCtrl">
         <input ng-model="search" ng-change="doSearch()"/>
         <table class="table striped">
@@ -29,8 +26,5 @@
             </tr>
         </table>
     </div>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/angular.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/angular-resource.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/cards.js"></script>
-</body>
-</html>
+</div>
+{% endblock content %}
