Added creation and deletion of catalog through web site

--- a/puppet/environments/setmaster/modules/setmaster/templates/setmaster.conf.erb
+++ b/puppet/environments/setmaster/modules/setmaster/templates/setmaster.conf.erb
@@ -10,9 +10,13 @@ server {
     charset utf-8;
     client_max_body_size    4G;
     gzip on;
-
-    location / {
-        try_files $uri @proxy_to_app;
+    
+    location /static/ {
+        autoindex    on;
+        alias /var/www/setmaster_static/;
+        access_log      off;
+        log_not_found   off;
+        expires 1y;
     }
 
     <% if sm_authmode == 'closed' %>
@@ -20,9 +24,8 @@ server {
         auth_basic_user_file    /etc/nginx/htaccess;
     <% end %>
 
-    location @proxy_to_app {
-        set $language 'pt_PT';
-        proxy_set_header Accept-Language $language;
+    location / {
+        proxy_read_timeout      30s;
         proxy_redirect      off;
         proxy_set_header    Host                    $http_host;
         proxy_set_header    X-Real-IP               $remote_addr;
@@ -30,13 +33,6 @@ server {
         proxy_set_header    X-Forwarded-Protocol    $scheme;
         proxy_pass          http://setmaster;
         proxy_buffering off;
-    }
-
-    location /static/ {
-        autoindex    on;
-        alias /var/www/setmaster_static/;
-        access_log      off;
-        log_not_found   off;
     }
 
 }
