--- a/setmaster/frontend/templates/base.html
+++ b/setmaster/frontend/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-resource.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/cards.js"></script>
 </head>
 <body>
