--- a/setmaster/frontend/templates/base.html
+++ b/setmaster/frontend/templates/base.html
@@ -4,9 +4,11 @@
     <title>SetMaster</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/vendor/bootstrap.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
-    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-resource.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-ui-1.10.2.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-1.0.6.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-resource-1.0.6.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-dragdrop-1.0.0.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/cards.js"></script>
 </head>
 <body>
