--- a/setmaster/frontend/templates/index_auth.html
+++ b/setmaster/frontend/templates/index_auth.html
@@ -2,29 +2,40 @@
 {% load i18n %}
 {% block content %}
 <div class="row-fluid">
-    <div class="span2">
-        <div ng-controller="CatalogCtrl">
-            <h6>{% trans "My collections" %}</h6>
-            <input ng-model="catalog_name"/>
-            {% csrf_token %}
-            <button class="btn" ng-click="addCatalog()">{% trans "Add" %}</button>
-            <ul>
-                <li ng-repeat="catalog in catalogs.catalogs">
+    <div ng-controller="CatalogCtrl">
+        <div class="span2">
+            <div ng-controller="CatalogCtrl">
+                <h6>{% trans "My collections" %}</h6>
+                <input ng-model="catalog_name"/>
+                {% csrf_token %}
+                <button class="btn" ng-click="addCatalog()">{% trans "Add" %}</button>
+                <ul>
                     {% verbatim %}
-                        {{ catalog.name }} ({{ catalog.items }})
-                        <button class="btn btn-error" ng-click="deleteCatalog(catalog.id)">
-                            <i class="icon-remove-sign"></i>
-                        </button>
+                        <li ng-model="catalog_drop"
+                        ng-repeat="catalog in catalogs.catalogs" data-drop="true"
+                        jqyoui-droppable="{index: {{$index}}, onDrop:'dropCallback', onOver: 'overCallback', onOut: 'outCallback', helper:'clone'}">
+                            {{ catalog.name }} ({{ catalog.items }})
+                            <button ng-class="catalog.class" class="btn btn-error" ng-click="deleteCatalog(catalog.id)">
+                                <i class="icon-remove-sign"></i>
+                            </button>
+                        </li>
                     {% endverbatim %}
-                </li>
-            </ul>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="span10" ng-app="Cards">
-        <div ng-controller="CardCtrl">
+        <div class="span10" ng-app="Cards">
             <input ng-model="search" ng-change="doSearch()"/>
-            <div class ng-repeat="card in cards.results">
-                <img ng-src="{% templatetag openvariable %}card.image{% templatetag closevariable %}" width="200px" class="pull-left"/>
+            <div ng-repeat="card in cards.results">
+                {% verbatim %}
+                    <div class="pull-left">
+                        <div ng-model="cards" data-drag="true"
+                            data-jqyoui-options="{revert: 'valid'}"
+                            jqyoui-draggable="{index: {{$index}}, placeholder:true, helper:'clone'}" >
+                            <h5>{{ card.name }}</h5>
+                        </div>
+                        <img ng-src="{{card.image}}" width="200px" class="pull-left"/>
+                    </div>
+                {% endverbatim %}
             </div>
         </div>
     </div>
