--- a/setmaster/frontend/templates/base.html
+++ b/setmaster/frontend/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="Cards">
+<html>
 <head>
     <title>SetMaster</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/vendor/bootstrap.css">
@@ -9,9 +9,14 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-1.0.6.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-resource-1.0.6.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/angular-dragdrop-1.0.0.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/cards.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/directives/draggable.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/directives/droppable.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/controllers/main.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/controllers/cards.js"></script>
 </head>
-<body>
+<body ng-app="setmaster">
+    {% block navbar %}
     <div class="navbar">
       <div class="navbar-inner">
         <a class="brand" href="/">SetMaster</a>
@@ -24,6 +29,7 @@
         </ul>
       </div>
     </div>
+    {% endblock %}
     <div class="container-fluid">
         {% block content %}
         {% endblock content %}
