--- a/setmaster/frontend/templates/partials/catalog.html
+++ b/setmaster/frontend/templates/partials/catalog.html
@@ -1,15 +1,13 @@
 {% load i18n %}
 <div class="span2">
     <div ng-controller="CatalogCtrl">
-        <h6>{% trans "My collections" %}</h6>
+        <h3>{% trans "My collections" %}</h3>
         <input ng-model="catalog_name"/>
         {% csrf_token %}
         <button class="btn" ng-click="addCatalog()">{% trans "Add" %}</button>
         <ul>
             {% verbatim %}
-                <li ng-model="catalog_drop"
-                ng-repeat="catalog in catalogs.catalogs" data-drop="true"
-                jqyoui-droppable="{index: {{$index}}, onDrop:'dropCallback', onOver: 'overCallback', onOut: 'outCallback', helper:'clone'}">
+                <li ng-repeat="catalog in catalogs.catalogs"  droppable>
                     {{ catalog.name }} ({{ catalog.items }})
                     <button ng-class="catalog.class" class="btn btn-error" ng-click="deleteCatalog(catalog.id)">
                         <i class="icon-remove-sign"></i>
@@ -23,12 +21,8 @@
     <input ng-model="search" ng-change="doSearch()"/>
     <div ng-repeat="card in cards.results">
         {% verbatim %}
-            <div class="pull-left">
-                <div ng-model="cards" data-drag="true"
-                    data-jqyoui-options="{revert: 'valid'}"
-                    jqyoui-draggable="{index: {{$index}}, placeholder:true, helper:'clone'}" >
-                    <h5>{{ card.name }}</h5>
-                </div>
+            <div class="pull-left" draggable>
+                <h5>{{ card.name }}</h5>
                 <img ng-src="{{card.image}}" width="200px" class="pull-left"/>
             </div>
         {% endverbatim %}
