Added CREATE request to add cards to a catalog

--- a/setmaster/frontend/templates/base.html
+++ b/setmaster/frontend/templates/base.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/services/cards.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/services/catalog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/controllers/main.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/controllers/cards.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/controllers/catalog_manager.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/directives/draggable.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/directives/droppable.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/directives/zoom.js"></script>
