Much improved scrapping from gatherer. Completely change mongo's card structure. Using mongoengine.

--- a/setmaster/frontend/templates/partials/catalog.html
+++ b/setmaster/frontend/templates/partials/catalog.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="span2">
-    <div ng-controller="CatalogCtrl">
+    <div ng-controller="CatalogManagerCtrl">
         <h3>{% trans "My collections" %}</h3>
         <input ng-model="catalog_name"/>
         <button class="btn" ng-click="addCatalog()">{% trans "Add" %}</button>
