--- a/setmaster/frontend/templates/partials/catalog.html
+++ b/setmaster/frontend/templates/partials/catalog.html
@@ -20,10 +20,7 @@
     <input ng-model="search" ng-change="doSearch()"/>
     <div ng-repeat="card in cards.results">
         {% verbatim %}
-            <div class="pull-left" draggable data-multiverseid="{{card.multiverse_id}}">
-                <h5>{{ card.name }}</h5>
-                <img ng-src="{{card.image}}" width="200px" class="pull-left" zoom/>
-            </div>
+            <img ng-src="{{card.image}}" width="200px" class="pull-left" zoom class="pull-left" draggable data-multiverseid="{{card.multiverse_id}}"/>
         {% endverbatim %}
     </div>
 </div>
